test/arrays/diten/forallArrayTypeVar.good
forallArrayTypeVar.chpl:1: error: cannot assign value to type variable
